k8s/microservices/lockmaster.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lockmaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: lockmaster
          image: lockmaster:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          ports:
          - containerPort: 5000
        - name: mysql
          image: mysql:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: standard
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
