k8s/microservices/lockmaster-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: lockmaster-service
spec:
  type: ClusterIP
  selector:
    component: lockmaster
  ports:
    - port: 5000
      name: http
      targetPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lockmaster-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: lockmaster
  template:
    metadata:
      labels:
        component: lockmaster
    spec:
      containers:
        - name: lockmaster
          image: ghcr.io/rkochar/wsdm/lockmaster:test
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 5000
