k8s/microservices/order-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: LoadBalancer
  selector:
    component: order
  ports:
    - port: 5000
      name: http
      targetPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      component: order
  template:
    metadata:
      labels:
        component: order
    spec:
      containers:
        - name: order
          image: ghcr.io/rkochar/wsdm/order:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 5000
