k8s/microservices/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-service
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/use-regex: "true"
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
   - http:
      paths:
#        - path: /orders/checkout/?(.*)
#          pathType: Prefix
#          backend:
#            service:
#              name: api-gateway-service-0
#              port:
#                number: 27017
        - path: /orders/(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: order-service
              port:
                number: 5000
        - path: /stock/(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: stock-service
              port:
                number: 5000
        - path: /payment/

          pathType: ImplementationSpecific
          backend:
            service:
              name: payment-service
              port:
                number: 5000
